add give-classes page

--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -75,7 +75,7 @@
     background: var(--color-secundary-dark);
 }
 
-@media (min-width) {
+@media (min-width: 700px) {
     .teacher-item header,
     .teacher-item footer {
         padding: 3.2rem;
